# bloodhound-core

./: .editorconfig  .gitignore  .rat-ignore  Makefile  NOTICE  README.md  functional_tests.py  pom.xml  pyproject.toml  pytest.ini
bh_core/: settings.py  urls.py
docker/: docker-compose.yaml
docker/db/: Dockerfile
trackers/: admin.py  apps.py  models.py  urls.py  views.py
trackers/api/: serializers.py  urls.py  views.py
trackers/api/tests/: test_product_api.py  test_ticket_api.py  test_ticket_api_hyp.py
trackers/fixtures/: empty.yml
trackers/tests/: test_models.py  tests.py
