[tool.poetry]
name = "bloodhound-core"
version = "0.1.0"
description = "Apache Bloodhound Issue Tracker core functionality"
authors = ["Apache Bloodhound <dev@bloodhound.apache.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
drf-yasg = "^1.20.0"
drf-nested-routers = "^0.93.4"
PyYAML = "^6.0"
psycopg2 = { version = "^2.9", optional = true }
psycopg2-binary = { version = "^2.9", optional = true }

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
django-extensions = "^3.1.3"
hypothesis = "^6.21.0"

[tool.poetry.extras]
postgres = ["psycopg2"]
postgres-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
