[tool.poetry]
name = "bloodhound-core"
version = "0.1.0"
description = "Apache Bloodhound Issue Tracker core functionality"
authors = ["Apache Bloodhound <dev@bloodhound.apache.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
drf-yasg = "^1.21.4"
drf-nested-routers = "^0.93.4"
PyYAML = "^6.0"
psycopg2 = { version = "^2.9", optional = true }
psycopg2-binary = { version = "^2.9", optional = true }

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
django-extensions = "^3.2.1"
hypothesis = "^6.56.4"

[tool.poetry.extras]
postgres = ["psycopg2"]
postgres-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
