#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing,
#  software distributed under the License is distributed on an
#  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#  KIND, either express or implied.  See the License for the
#  specific language governing permissions and limitations
#  under the License.

[tool.poetry]
name = "bloodhound-core"
version = "0.1.0"
description = "Apache Bloodhound Issue Tracker core functionality"
authors = ["Apache Bloodhound <dev@bloodhound.apache.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
drf-yasg = "^1.21.4"
drf-nested-routers = "^0.93.4"
PyYAML = "^6.0"
psycopg2 = { version = "^2.9", optional = true }
psycopg2-binary = { version = "^2.9", optional = true }

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
django-extensions = "^3.2.1"
hypothesis = "^6.56.4"

[tool.poetry.extras]
postgres = ["psycopg2"]
postgres-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
